<resources>
    <string name="app_name">Smart Portfolio</string>

    <!--  General Texts  -->
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="dismiss">Dismiss</string>
    <string name="close">Close</string>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="remove">Remove</string>
    <string name="edit">Edit</string>
    <string name="reset">Reset</string>
    <string name="enable">Enable</string>
    <string name="disable">Disable</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="unknown_error_message">Unknown error</string>

    <!--  DrawerLayout  -->
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>

    <!--  Manifest  -->
    <string name="label_edit_portfolio">Editing</string>

    <!--  LoginActivity  -->
    <string name="login_username">Username</string>
    <string name="login_password">Password</string>
    <string name="login_button_text">Login</string>
    <string name="login_start">Start</string>
    <string name="login_or">Or</string>
    <string name="login_not_valid">Please fill out the form.</string>
    <string name="login_id_not_valid">Incorrect username</string>
    <string name="login_pw_not_valid">Incorrect password</string>
    <string name="navigation_drawer_close_button">Close Drawer Button</string>
    <string name="login_help">Have trouble?</string>
    <string name="login_help_dialog">The initial ID and Password is <font color='#F44336'>admin</font>.\n\nIn order to manage portfolios, signing as an admin is required.\nIf you are visitor, press <font color='#0277BD'>Start</font> Button to discover.</string>
    <string name="login_biometric_title">SmartPortfolio Sign in</string>
    <string name="login_biometric_subtitle">Signing in via biometric.</string>
    <string name="login_biometric_negative">Use password</string>

    <!--  MainActivity  -->
    <string name="main_image_button_prev">Previous Page Button</string>
    <string name="main_image_button_next">Next Page Button</string>
    <string name="main_nav_submenu_portfolio">Portfolios</string>
    <string name="main_nav_submenu_title">Introduction</string>
    <string name="main_nav_menu_index">Index</string>
    <string name="main_nav_submenu_app">Application</string>
    <string name="main_nav_menu_license">Licenses</string>
    <string name="main_nav_menu_info">Application Info</string>
    <string name="main_nav_menu_settings">Settings</string>
    <string name="main_nav_submenu_manage">Manage</string>
    <string name="main_nav_menu_add">Add Member</string>
    <string name="main_nav_menu_remove">Remove Member</string>
    <string name="main_nav_menu_receive">Receive Member</string>
    <string name="main_member_add_title">Add Member</string>
    <string name="main_member_add_name">Name</string>
    <string name="main_member_add_name_hint">Profile name</string>
    <string name="main_member_add_url">Web</string>
    <string name="main_member_add_url_hint">URL</string>
    <string name="main_member_remove_confirm">Would you like to remove?</string>
    <string name="main_member_remove_not_destroyable">The initial data cannot be removed.</string>
    <string name="main_portfolio_list">Portfolios</string>

    <!--  IndexFragment  -->
    <string name="main_index">Index</string>
    <string name="main_index_desc">Discover and manage all the portfolios.</string>

    <!--  TimelineViewHolder  -->
    <string name="row_timeline_open_link">Open Link</string>
    <!--  MessageViewHolder  -->
    <string name="row_message_open_link">Open Link</string>

    <!--  PortfolioAdapter  -->
    <string name="portfolio_browser_title">Open Link</string>
    <string name="portfolio_browser_content">Which browser would you prefer?</string>
    <string name="portfolio_browser_internal">Internal</string>
    <string name="portfolio_browser_chrome">Chrome</string>
    <string name="portfolio_browser_remember">Remember my preference</string>
    <string name="portfolio_share">Share Portfolio</string>

    <!--  WebViewActivity  -->
    <string name="menu_open_external">Open in browser</string>
    <string name="menu_copy">Copy URL</string>
    <string name="web_url_error">Invalid URL</string>

    <!--  SettingsActivity  -->
    <string name="settings_category_login">Account</string>
    <string name="settings_auto_login">Auto Sign In</string>
    <string name="settings_auto_login_summary_on">Automatically sign in on start.</string>
    <string name="settings_auto_login_summary_off">Go to sign in page on start.</string>
    <string name="settings_biometric">Biometric Authentication</string>
    <string name="settings_biometric_summary">Sign in via biometric authentication (eg. Fingerprint, Face Recognition)</string>
    <string name="settings_biometric_none_enrolled">No authentication has been registered.</string>
    <string name="settings_biometric_enroll">Enroll</string>
    <string name="settings_logout">Sign Out</string>
    <string name="settings_admin_id">Admin ID</string>
    <string name="settings_admin_pw">Change Password</string>
    <string name="settings_admin_pw_current">Current Password</string>
    <string name="settings_admin_pw_new">New Password</string>
    <string name="settings_admin_pw_check">Re-type Password</string>
    <string name="settings_category_app">Application</string>
    <string name="settings_db_reset">Reset DB</string>
    <string name="settings_db_reset_summary">Remove all data from DB</string>
    <string name="settings_db_init">Install Initial DB</string>
    <string name="settings_db_init_summary">Install pre-installed DB again</string>
    <string name="settings_category_info">Application Info</string>
    <string name="settings_version">Application Version</string>
    <string name="settings_build">Build Number</string>
    <string name="settings_category_license">Licenses</string>
    <string name="settings_license">Licenses</string>
    <string name="settings_developer">Development</string>
    <string name="settings_developer_summary">Choi, Myung Geun (최명근)</string>
    <string name="settings_developer_detail">Hallym Univ. \n20185301 Choi, Myung Geun</string>
    <string name="settings_developer_github">Github</string>
    <string name="settings_developer_portfolio">Portfolio</string>
    <string name="settings_github">Github</string>

    <!--  SettingsActivity+AlertDialog  -->
    <string name="settings_admin_id_dialog">Enter new administrator ID.</string>
    <string name="settings_admin_id_not_valid">Please fill the form.</string>
    <string name="settings_admin_pw_not_valid">Current password doesn\'t match</string>
    <string name="settings_admin_pw_check_not_valid">Password check not valid</string>
    <string name="settings_admin_pw_success">Password has been changed</string>
    <string name="settings_db_reset_dialog"><font color='#F44336'>DESTRUCTIVE JOB</font>\n\nThis deletion cannot be undone. The initial data will be deleted as well.\n\n(To install the initial DB, run \'Install Initial DB\'.) \n\nWould you like to proceed?</string>
    <string name="settings_db_init_dialog">Would you like to install the initial DB?</string>

    <!--  PortfolioManageActivity  -->
    <string name="portfolio_manage_error">No Data</string>
    <string name="portfolio_edit_name_title">Editing Name</string>
    <string name="edit_portfolio_title">Title</string>
    <string name="edit_portfolio_content">Content</string>
    <string name="edit_portfolio_github">Github</string>
    <string name="edit_portfolio_link">URL</string>
    <string name="portfolio_edit_title">Editing Portfolio</string>
    <string name="portfolio_write_title">Writing Portfolio</string>
    <string name="portfolio_write_image_add">Add Image</string>
    <string name="portfolio_write_cover_image_desc">Cover Image</string>
    <string name="portfolio_write_image_remove">Remove Image</string>
    <string name="portfolio_write_image_remove_message">Would you like to remove image?</string>
    <string name="portfolio_write_title_not_valid">Please enter the title</string>
    <string name="portfolio_write_content_not_valid">Please enter the content</string>
    <string name="portfolio_write_url_not_valid">Please enter the correct URL</string>

    <!--  ProfileViewHolder  -->
    <string name="row_profile_img_edit">Edit</string>
    <string name="row_profile_image">Profile Image</string>
    <string name="view_style_timeline">Timeline</string>
    <string name="view_style_message">Chat View</string>
    <string name="view_style_card">Card View</string>
    <string name="row_portfolio_github_image">Github Image</string>
    <string name="row_profile_view_style">View Style</string>
    <string name="row_card_open_link">Open Link</string>

    <!--  PortfolioDetailActivity  -->
    <string name="portfolio_detail_cover">Portfolio Cover Image</string>

    <!--  ShareActivity  -->
    <string name="share_title">Sharing</string>
    <string name="share_bt_not_supported">Bluetooth Error</string>
    <string name="share_bt_not_supported_message">Bluetooth is not available for this device.</string>
    <string name="share_bt_off">Bluetooth Off</string>
    <string name="share_bt_off_message">Please try again after enable the Bluetooth.</string>
    <string name="share_bt_permission">Bluetooth permission has denied.</string>
    <string name="share_bt_connect">Bluetooth</string>
    <string name="share_bt_bond">Connect</string>
    <string name="share_bt_bond_message">Please connect the device to share.\n\nIf the device is already connected, press <b>Select Device</b>.</string>
    <string name="share_bt_choose">Select Device</string>
    <string name="share_bt_connect_error">Connect refused</string>
    <string name="share_data">Sharing Data</string>
    <string name="share_data_member">Member</string>
    <string name="share_data_count">Data Count</string>
    <string name="share_data_warning">Please note that the sharing data <b>does not include images</b>.</string>
    <string name="share_send">Transfer</string>
    <string name="share_bt_connect_required">Please connect the device.</string>
    <string name="share_bt_send_fail">Failed to transfer data</string>
    <string name="share_transfer_success">Transfer Success</string>
    <string name="share_transfer_success_message">Data has been transferred successfully.</string>

    <!--  ReceiveActivity  -->
    <string name="share_bt_bond_message_for_client">Please connect the device.\n\nIf the device is already connected, press <b>Standby</b>.</string>
    <string name="share_bt_standby">Standby</string>
    <string name="share_receive_success">Receive Success</string>
    <string name="share_receive_success_message">Data has been received successfully.\n\nWould you like to save the data?</string>

</resources>