<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:text="@string/main_member_add_name"
            android:textColor="@color/text_secondary">

        </TextView>

        <EditText
            android:id="@+id/edit_text_profile_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/main_member_add_name_hint"
            android:importantForAutofill="no"
            android:inputType="text"
            android:padding="8dp">

        </EditText>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="top"
        android:orientation="horizontal">

        <TextView
            android:layout_width="32dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/main_member_add_url"
            android:textColor="@color/text_secondary">

        </TextView>

        <EditText
            android:id="@+id/edit_text_profile_url"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:background="@drawable/bg_edit_text"
            android:hint="@string/main_member_add_url_hint"
            android:importantForAutofill="no"
            android:inputType="textUri"
            android:padding="8dp">

        </EditText>

    </LinearLayout>

</LinearLayout>