<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:theme="@style/Theme.SmartPortfolio.ViewGroup"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="36sp"
        android:theme="@style/Theme.SmartPortfolio.Title"
        app:layout_constraintBottom_toTopOf="@+id/linear_login_field"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="Title">

    </TextView>

    <LinearLayout
        android:id="@+id/linear_login_field"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:maxWidth="360dp"
        android:minWidth="240dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.5">

        <LinearLayout
            android:id="@+id/layout_login_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="4dp">

            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:src="@drawable/ic_baseline_help_24"
                app:tint="@color/text_secondary">

            </ImageView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:text="@string/login_help"
                android:textColor="@color/text_secondary"
                android:textSize="12sp">

            </TextView>

        </LinearLayout>

        <EditText
            android:id="@+id/edit_text_login_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:autofillHints="username"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_round_person_24_70"
            android:drawablePadding="8dp"
            android:hint="@string/login_username"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

        </EditText>

        <EditText
            android:id="@+id/edit_text_login_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:autofillHints="password"
            android:background="@drawable/bg_edit_text"
            android:drawableStart="@drawable/ic_baseline_key_24_70"
            android:drawablePadding="8dp"
            android:hint="@string/login_password"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="8dp"
            android:paddingBottom="8dp">

        </EditText>

    </LinearLayout>

    <Button
        android:id="@+id/btn_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/login_button_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linear_login_field">

    </Button>

    <FrameLayout
        android:id="@+id/divider_login"
        android:layout_width="160dp"
        android:layout_height="1dp"
        android:layout_marginTop="24dp"
        android:background="@color/black_30"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_login">

    </FrameLayout>

    <TextView
        android:id="@+id/txt_login_divider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/login_or"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider_login">

    </TextView>

    <Button
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/login_start"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txt_login_divider">

    </Button>

</androidx.constraintlayout.widget.ConstraintLayout>