<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_portfolio_edit_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_portfolio_title"
                android:textColor="@color/text_secondary">

            </TextView>

            <EditText
                android:id="@+id/edit_text_portfolio_edit_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/edit_portfolio_title"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="top"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_portfolio_edit_content"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_portfolio_content"
                android:textColor="@color/text_secondary">

            </TextView>

            <EditText
                android:id="@+id/edit_text_portfolio_edit_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_edit_text"
                android:gravity="top"
                android:hint="@string/edit_portfolio_content"
                android:importantForAutofill="no"
                android:inputType="textMultiLine"
                android:lines="5"
                android:padding="8dp">

            </EditText>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/txt_portfolio_edit_github"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_portfolio_link"
                android:textColor="@color/text_secondary">

            </TextView>

            <EditText
                android:id="@+id/edit_text_portfolio_edit_github"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:background="@drawable/bg_edit_text"
                android:hint="@string/edit_portfolio_github"
                android:importantForAutofill="no"
                android:inputType="text"
                android:padding="8dp">

            </EditText>

        </LinearLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/layout_portfolio_edit_image"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:clickable="true"
            android:focusable="true"
            android:foreground="?android:attr/selectableItemBackground"
            app:cardCornerRadius="16dp"
            app:cardElevation="0dp">

            <TextView
                style="@style/Theme.SmartPortfolio.TextButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:clickable="false"
                android:focusable="false"
                android:text="@string/portfolio_write_image_add">

            </TextView>

            <ImageView
                android:id="@+id/img_portfolio_edit_cover"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:contentDescription="@string/portfolio_write_cover_image_desc"
                android:scaleType="centerCrop"
                tools:src="@drawable/ic_avatar_04">

            </ImageView>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</ScrollView>