<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_secondary"
    tools:context=".frament.IndexFragment">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                style="@style/Theme.SmartPortfolio.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/main_index"
                android:textSize="36sp"
                android:textStyle="bold">

            </TextView>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/main_index_desc"
                android:textColor="@color/text_secondary"
                android:textSize="16sp">

            </TextView>

            <TextView
                style="@style/Theme.SmartPortfolio.Title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="24dp"
                android:text="@string/main_portfolio_list"
                android:textSize="18sp"
                android:textStyle="bold">

            </TextView>

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="?android:attr/actionBarSize"
                android:fitsSystemWindows="true">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="24dp"
                    app:cardCornerRadius="16dp"
                    app:cardElevation="0dp"
                    app:cardUseCompatPadding="false">

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_index"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:overScrollMode="never"
                        tools:listitem="@layout/row_index">

                    </androidx.recyclerview.widget.RecyclerView>

                </androidx.cardview.widget.CardView>

            </FrameLayout>

        </LinearLayout>

    </androidx.core.widget.NestedScrollView>

</FrameLayout>